added extensions for opengl buffers, array objects and framebuffers

--- a/normalMapping/normalMapping.vcxproj.filters
+++ b/normalMapping/normalMapping.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="storage\storage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gl\glExtensions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="controller\controller.h">
@@ -54,6 +57,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="storage\storage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gl\glExtensions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gl\glExtensions.defines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
