--- a/normalMapping/normalMapping.vcxproj
+++ b/normalMapping/normalMapping.vcxproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="controller\controller.cpp" />
+    <ClCompile Include="gl\glExtensions.cpp" />
     <ClCompile Include="mainWindow\MainWindow.cpp" />
     <ClCompile Include="main\main.cpp" />
     <ClCompile Include="program\program.cpp" />
@@ -138,6 +139,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="controller\controller.h" />
+    <ClInclude Include="gl\glExtensions.defines.h" />
+    <ClInclude Include="gl\glExtensions.h" />
     <ClInclude Include="mainWindow\MainWindow.h" />
     <ClInclude Include="main\main.h" />
     <ClInclude Include="program\program.h" />
