--- a/normalMapping/normalMapping.vcxproj.filters
+++ b/normalMapping/normalMapping.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="gl\glExtensions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gl\glShader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="controller\controller.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="gl\glExtensions.defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gl\glShader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
