view class implemented

--- a/normalMapping/normalMapping.vcxproj
+++ b/normalMapping/normalMapping.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="program\program.cpp" />
     <ClCompile Include="renderWindow\RenderWindow.cpp" />
     <ClCompile Include="storage\storage.cpp" />
+    <ClCompile Include="view\view.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="controller\controller.h" />
@@ -152,6 +153,7 @@
     <ClInclude Include="program\program.h" />
     <ClInclude Include="renderWindow\RenderWindow.h" />
     <ClInclude Include="storage\storage.h" />
+    <ClInclude Include="view\view.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
