--- a/normalMapping/normalMapping.vcxproj
+++ b/normalMapping/normalMapping.vcxproj
@@ -126,6 +126,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="..\build\data\fragment.glsl" />
+    <None Include="..\build\data\vertex.glsl" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
