--- a/normalMapping/normalMapping.vcxproj.filters
+++ b/normalMapping/normalMapping.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClCompile Include="theme\apptheme.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sidebar\sidebar.images.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="controller\controller.h">
