--- a/normalMapping/normalMapping.vcxproj
+++ b/normalMapping/normalMapping.vcxproj
@@ -77,7 +77,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)\build\bin\</OutDir>
     <IntDir>$(SolutionDir)\intermediate\</IntDir>
-    <IncludePath>$(SolutionDir)/../core/core/;$(SolutionDir)/../core-forms/core-forms/;$(ProjectDir);$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)/../core/core/;$(SolutionDir)/../core-game/core-game/;$(SolutionDir)/../core-forms/core-forms/;$(ProjectDir);$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\..\clib;$(LibraryPath)</LibraryPath>
     <ReferencePath>$(SolutionDir)\..\clib;$(ReferencePath)</ReferencePath>
   </PropertyGroup>
@@ -108,7 +108,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>core.lib;core-forms.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>core.lib;core-forms.lib;core-game.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -134,13 +134,8 @@
     <ClCompile Include="controller\controller.cpp" />
     <ClCompile Include="controller\controller.events.cpp" />
     <ClCompile Include="cube\cube.cpp" />
-    <ClCompile Include="gl\glExtensions.cpp" />
-    <ClCompile Include="gl\glShader.cpp" />
-    <ClCompile Include="gl\glTexture.cpp" />
     <ClCompile Include="mainWindow\MainWindow.cpp" />
     <ClCompile Include="main\main.cpp" />
-    <ClCompile Include="mesh\gameMesh.cpp" />
-    <ClCompile Include="mesh\glGameMesh.cpp" />
     <ClCompile Include="program\program.cpp" />
     <ClCompile Include="renderWindow\RenderWindow.cpp" />
     <ClCompile Include="sidebar\sidebar.cpp" />
@@ -148,28 +143,18 @@
     <ClCompile Include="statusbar\statusbar.cpp" />
     <ClCompile Include="storage\storage.cpp" />
     <ClCompile Include="theme\apptheme.cpp" />
-    <ClCompile Include="view\glview.cpp" />
-    <ClCompile Include="view\view.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="controller\controller.h" />
     <ClInclude Include="cube\cube.h" />
-    <ClInclude Include="gl\glExtensions.defines.h" />
-    <ClInclude Include="gl\glExtensions.h" />
-    <ClInclude Include="gl\glShader.h" />
-    <ClInclude Include="gl\glTexture.h" />
     <ClInclude Include="mainWindow\MainWindow.h" />
     <ClInclude Include="main\main.h" />
-    <ClInclude Include="mesh\gameMesh.h" />
-    <ClInclude Include="mesh\glGameMesh.h" />
     <ClInclude Include="program\program.h" />
     <ClInclude Include="renderWindow\RenderWindow.h" />
     <ClInclude Include="sidebar\sidebar.h" />
     <ClInclude Include="statusbar\statusbar.h" />
     <ClInclude Include="storage\storage.h" />
     <ClInclude Include="theme\apptheme.h" />
-    <ClInclude Include="view\glview.h" />
-    <ClInclude Include="view\view.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
